# campus-ai

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yml  nixpacks.toml  package.json  pnpm-lock.yaml  pyproject.toml  railway.toml  requirements.txt
app/: __init__.py  config.py  database.py  main.py  middleware.py
app/api/: __init__.py  admin.py  ask.py  deps.py  router.py
app/api/v1/: ask.py  athletics.py  dining.py  events.py  health.py  news.py  nightlife.py  router.py
app/core/: __init__.py  config.py  database.py  redis.py
app/models/: __init__.py  admin.py  content.py
app/schemas/: ask.py  base.py
app/services/: __init__.py  dedup.py  rag.py
app/workers/: __init__.py  tasks.py
components/uip/: background-scene.tsx  sidebar.tsx  status-bar.tsx  top-nav.tsx
components/uip/admin/: admin-dashboard.tsx
components/uip/pages/: events-page.tsx  news-page.tsx
frontend/: pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/uip/: ask-uip-tab.tsx  browse-data-tab.tsx  dashboard-shell.tsx  landing-page.tsx  sidebar.tsx  sparkle-icon.tsx  widget-cards.tsx
frontend/components/uip/pages/: athletics-page.tsx  dining-page.tsx  nightlife-page.tsx
frontend/lib/: uip-data.ts
pipeline/: __init__.py
pipeline/config/: loader.py
pipeline/config/michigan/: athletics.yaml  dining.yaml  events.yaml  news.yaml  nightlife.yaml
pipeline/config/umd/: athletics.yaml  dining.yaml  events.yaml  news.yaml  nightlife.yaml
pipeline/flows/: __init__.py  factory.py  tasks.py
pipeline/flows/umd/: __init__.py  athletics.py  dining.py  events.py  news.py  nightlife.py
pipeline/flows/umich/: __init__.py  athletics.py  dining.py  events.py  news.py  nightlife.py
pipeline/scrapers/: __init__.py  base.py
pipeline/scrapers/umd/: __init__.py  athletics.py  dining.py  events.py  news.py  nightlife.py
pipeline/scrapers/umich/: __init__.py  athletics.py  dining.py  events.py  news.py  nightlife.py
pipeline/structuring/: __init__.py  llm.py
tests/: __init__.py  conftest.py
tests/test_api/: test_admin.py  test_ask.py
tests/test_pipeline/: __init__.py  test_dedup.py
