[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "campus-ai"
version = "0.1.0"
description = "AI-powered campus intelligence platform for UMD and University of Michigan"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Database
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    # Redis / task queue
    "redis>=5.2.0",
    "arq>=0.26.1",
    # Vector store
    "qdrant-client>=1.13.0",
    # Pipeline orchestration
    "prefect>=3.0.0",
    # Scraping
    "scrapling>=0.2.9",
    # LLM / OpenAI
    "openai>=1.68.0",
    "tiktoken>=0.9.0",
    # Embeddings / RAG
    "sentence-transformers>=3.4.0",
    # Validation / settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    # Utilities
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "anyio>=4.7.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-redis>=4.6.0",
]

[project.scripts]
campus-ai = "app.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "anyio>=4.7.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov=pipeline --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["app", "pipeline"]
