[project]
name = "university-intelligence-platform"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    # Core API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlmodel>=0.0.21",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Cache / Queue
    "redis>=5.0.0",
    "arq>=0.25.0",

    # HTTP / Async
    "httpx>=0.27.0",

    # Observability
    "structlog>=24.0.0",
    "sentry-sdk[fastapi]>=2.0.0",

    # Utils
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

pipeline = [
    # Orchestration
    "prefect>=2.19.0",

    # Scraping
    "scrapling>=0.2.0",
    "playwright>=1.44.0",       # DynamicFetcher dependency

    # AI / LLM
    "openai>=1.30.0",           # GPT-4o structuring + RAG + dedup
    "anthropic>=0.28.0",        # Claude fallback

    # Vector store
    "qdrant-client>=1.9.0",

    # Embeddings
    "tiktoken>=0.7.0",          # Token counting before embedding

    # Data processing
    "pyyaml>=6.0.0",            # Source registry YAML parsing
    "python-dateutil>=2.9.0",   # Event datetime normalization
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
